--- a/videos/朱灑しいと/イガク 踊ってみた.md
+++ b/videos/朱灑しいと/イガク 踊ってみた.md
@@ -1,7 +1,7 @@
 ---
 URL: https://www.youtube.com/watch?v=Sh7KyJPkjMc
 CategoryName: Others (J-POP)
-Flip: false
+Flip: true
 ---
 
 【朱灑しいと】イガク 踊ってみた【オリジナル振付】
